# djangoSIGE

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
djangosige/apps/base/management/commands/: create_data.py
djangosige/apps/base/templates/base/pdf/: relatorio_documento.html
djangosige/apps/cadastro/: urls.py
djangosige/apps/cadastro/views/: ajax_views.py
djangosige/apps/compras/: urls.py
djangosige/apps/compras/models/: compras.py
djangosige/apps/compras/views/: ajax_views.py  compras.py
djangosige/apps/estoque/: urls.py
djangosige/apps/estoque/migrations/: 0002_initial_data.py
djangosige/apps/estoque/models/: movimento.py
djangosige/apps/financeiro/: urls.py
djangosige/apps/financeiro/models/: lancamento.py
djangosige/apps/fiscal/: urls.py
djangosige/apps/fiscal/views/: processador_nf.py
djangosige/apps/login/: urls.py
djangosige/apps/vendas/: urls.py
djangosige/apps/vendas/models/: vendas.py
djangosige/apps/vendas/views/: ajax_views.py  pagamento.py  vendas.py
djangosige/configs/: settings.py
djangosige/static/css/: login.css  style.css
djangosige/templates/base/: base.html
djangosige/templates/login/: login.html
djangosige/tests/: test_security_ajax_views.py
djangosige/tests/cadastro/: test_views.py
djangosige/tests/compras/: test_views.py
djangosige/tests/estoque/: test_views.py
djangosige/tests/financeiro/: test_views.py
djangosige/tests/fiscal/: test_processador_nf.py  test_views.py
djangosige/tests/login/: test_views.py
djangosige/tests/vendas/: test_views.py
docker/nginx/: Dockerfile
docker/postgres/: Dockerfile
